<resources>
    <string name="app_name">RideCellAssignment</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="logout">Logout</string>
    <string name="logout_warning">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_up_instead">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="full_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="map">Map</string>
    <string name="profile">Profile</string>
    <string name="location_rt_permissions">Location Permission Required</string>
    <string name="okay">Ok</string>
    <string name="cancel_text">Cancel</string>
    <string name="dont_have_account">Do not have account? Sign Up now</string>
</resources>